# dig

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  go.mod  go.sum  llms-full.txt  llms.txt  mcp.json  ntk.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: dev-server.md  issues.md  release.md
.codex-plugin/: plugin.json
.cursor/rules/: dig.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: canary.yml  ci.yml  eval.yml  gitleaks.yml  npm-publish.yml  npm.yml  pypi-publish.yml  pypi.yml  release.yml  sdk.yml
clients/python/: README.md  pyproject.toml
clients/python/src/dig_client/: __init__.py
clients/python/tests/: test_client.py
clients/typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
cmd/dig/: main.go
docs/: RELEASING.md  architecture.md  evals.md  extensions.md  integration.md  landscape.md
hooks/: hooks.json  retain-session.sh
internal/cli/: codex_plugin_e2e_test.go  commands.go  dedup.go  drift.go  e2e_test.go  embed.go  export.go  hook_e2e_test.go  index_helper.go  lifecycle_test.go  mcp.go  mcp_test.go  org.go  recall.go  retain.go  (+9 more)
web/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.js  mdx-components.tsx  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+146 files in other folders)
